# ZipDepth-Quantized-Qualcomm-QNN-SM8350

./: .editorconfig  .gitattributes  .gitignore  DEPENDENCIES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle
LICENSES/: Qualcomm-QAIRT-TERMS.md  ZipDepth-MIT.txt
app/: build.gradle
app/libs/: onnxruntime-android-qnn-1.27.0.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: zipdepth.onnx
app/src/main/assets/models/: zd_a16w8_288.onnx  zd_a16w8_320.onnx  zd_a8w8_256.onnx  zd_a8w8_288.onnx  zd_a8w8_320.onnx  zd_a8w8_384.onnx
app/src/main/assets/testset/: img_00.rgb  img_01.rgb  img_02.rgb  img_03.rgb  img_04.rgb  img_05.rgb  ref_00.f32  ref_01.f32  ref_02.f32  ref_03.f32  ref_04.f32  ref_05.f32
app/src/main/cpp/: CMakeLists.txt  zipdepth_jni.c
app/src/main/java/org/zipdepth/npudemo/: CameraCalibrationController.kt  MainActivity.kt  ZipDepthNative.kt  ZipDepthService.kt
app/src/main/res/values/: strings.xml  styles.xml
calibration_target/: README.md  index.html  show-calibration-target.cmd  show_calibration_target.py
tools/: make_testset.py  zipdepth_gcb_export.py
tools/variants/: README.md  check_meta.py  compile_variants.sh  wrap_epctx.py  zd_qnnquant.py
